--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <a href="https://www.freecounterstat.com" title="free web page counter"><img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=masgqq9jqw41cuktcbdg4h43nnypgy3z" border="0" title="free web page counter" alt="free web page counter"></a>
   <div class="container">
     <h1>💼 Calculadora de Preço Final</h1>
 
@@ -40,4 +41,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
